@@ -222,10 +222,9 @@ operator|.
 name|next
 argument_list|()
 decl_stmt|;
-if|if
-condition|(
-operator|!
-operator|(
+name|Matcher
+name|matcher
+init|=
 operator|(
 name|Matcher
 operator|)
@@ -233,10 +232,10 @@ name|entry
 operator|.
 name|getValue
 argument_list|()
-operator|)
-operator|.
-name|matches
-argument_list|(
+decl_stmt|;
+name|String
+name|value
+init|=
 operator|(
 name|String
 operator|)
@@ -249,6 +248,21 @@ operator|.
 name|getKey
 argument_list|()
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|(
+name|value
+operator|==
+literal|null
+operator|)
+operator|||
+operator|!
+name|matcher
+operator|.
+name|matches
+argument_list|(
+name|value
 argument_list|)
 condition|)
 block|{
