@@ -1450,6 +1450,62 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testExtraModuleAttribute
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IvySettings
+name|settings
+init|=
+operator|new
+name|IvySettings
+argument_list|()
+decl_stmt|;
+name|XmlSettingsParser
+name|parser
+init|=
+operator|new
+name|XmlSettingsParser
+argument_list|(
+name|settings
+argument_list|)
+decl_stmt|;
+name|parser
+operator|.
+name|parse
+argument_list|(
+name|XmlSettingsParserTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"ivysettings-extra-module-attribute.xml"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"default"
+argument_list|,
+name|settings
+operator|.
+name|getResolveMode
+argument_list|(
+operator|new
+name|ModuleId
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"bar"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testCache
 parameter_list|()
 throws|throws
